tests/baselines/reference/project/sourceRootAbsolutePathModuleMultifolderSpecifyOutputFile/amd/sourceRootAbsolutePathModuleMultifolderSpecifyOutputFile.dts.errors.txt
bin/test.d.ts(9,16): error TS2436: Ambient module declaration cannot specify relative module name.
bin/test.d.ts(19,5): error TS2439: Import or export declaration in an ambient module declaration cannot reference module through relative module name.
bin/test.d.ts(19,25): error TS2307: Cannot find module '../outputdir_module_multifolder_ref/m2'.


==== bin/test.d.ts (3 errors) ====
    declare module "ref/m1" {
        export var m1_a1: number;
        export class m1_c1 {
            m1_c1_p1: number;
        }
        export var m1_instance1: m1_c1;
        export function m1_f1(): m1_c1;
    }
    declare module "../outputdir_module_multifolder_ref/m2" {
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2436: Ambient module declaration cannot specify relative module name.
        export var m2_a1: number;
        export class m2_c1 {
            m2_c1_p1: number;
        }
        export var m2_instance1: m2_c1;
        export function m2_f1(): m2_c1;
    }
    declare module "test" {
        import m1 = require("ref/m1");
        import m2 = require("../outputdir_module_multifolder_ref/m2");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2439: Import or export declaration in an ambient module declaration cannot reference module through relative module name.
                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module '../outputdir_module_multifolder_ref/m2'.
        export var a1: number;
        export class c1 {
            p1: number;
        }
        export var instance1: c1;
        export function f1(): c1;
        export var a2: typeof m1.m1_c1;
        export var a3: typeof m2.m2_c1;
    }
    